# AI-Data-Analyst-Agent

./: .gitignore  CONTRIBUTING.md  GITHUB_UPLOAD_CHECKLIST.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  PHASE1_SUMMARY.md  PHASE5_ARCHITECTURE_SUMMARY.md  README.md  all_the_changes_i_did.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ai_data_analyst/: __init__.py  cli.py
config/: default.yaml  loader.py
src/core/: __init__.py  pipeline.py
src/eda/: basic_eda.py
src/ingestion/: loader.py
src/insights/: __init__.py  insight_engine.py  insight_types.py  report_generator.py
src/reporting/: __init__.py  report_writer.py
src/schema/: inference.py  inference2.py
src/utils/: pretty_print.py
src/validation/: quality_checks.py  schema.py
src/visualization/: __init__.py  auto_viz.py  enhanced_plots.py  orchestrator.py  plots.py
tests/: demo.py  test_basic_eda_manual.py  test_complete_pipeline.py  test_final_demo.py  test_insights_detailed.py  test_insights_manual.py  test_integrated_with_viz.py  test_quality_checks_manual.py  test_schema_manual.py  test_schema_v2.py  test_visualization_manual.py
