[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-analyst"
version = "1.0.0"
description = "Automated Exploratory Data Analysis Engine with Insights Generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI Data Analyst Team"}
]
keywords = ["data-analysis", "eda", "insights", "automation", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Data Scientists",
    "Intended Audience :: Business Analysts",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "click>=8.0.0",
    "openpyxl>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-data-analyst"
Repository = "https://github.com/yourusername/ai-data-analyst.git"
Issues = "https://github.com/yourusername/ai-data-analyst/issues"
Documentation = "https://ai-data-analyst.readthedocs.io"

[project.scripts]
ai-analyst = "ai_data_analyst.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "ai_data_analyst*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"

[tool.coverage.run]
source = ["src", "ai_data_analyst"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
